# CMakeList.txt : CMake project for Template, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Chapter_12")

set (CMAKE_CXX_STANDARD 14)
set (CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/..)
add_library (PPP2GUI STATIC ../GUI/GUI.cpp ../GUI/Graph.cpp ../GUI/Simple_window.cpp ../GUI/Window.cpp)

set (FILE_NAME C12_Drill_12)
set (SOURCE_CXX_LIST ${FILE_NAME}.cpp)
set (FILE_NAME2 C12_Exercise_12.1)
set (SOURCE_CXX_LIST2 ${FILE_NAME2}.cpp)
set (FILE_NAME3 C12_Exercise_12.2)
set (SOURCE_CXX_LIST3 ${FILE_NAME3}.cpp)
set (FILE_NAME4 C12_Exercise_12.3)
set (SOURCE_CXX_LIST4 ${FILE_NAME4}.cpp)
set (FILE_NAME5 C12_Exercise_12.4)
set (SOURCE_CXX_LIST5 ${FILE_NAME5}.cpp)
set (FILE_NAME6 C12_Exercise_12.5)
set (SOURCE_CXX_LIST6 ${FILE_NAME6}.cpp)
set (FILE_NAME7 C12_Exercise_12.6_1)
set (SOURCE_CXX_LIST7 ${FILE_NAME7}.cpp)
set (FILE_NAME8 C12_Exercise_12.6_2)
set (SOURCE_CXX_LIST8 ${FILE_NAME8}.cpp)
set (FILE_NAME9 C12_Exercise_12.7)
set (SOURCE_CXX_LIST9 ${FILE_NAME9}.cpp)
set (FILE_NAME10 C12_Exercise_12.8)
set (SOURCE_CXX_LIST10 ${FILE_NAME10}.cpp)
set (FILE_NAME11 C12_Exercise_12.9)
set (SOURCE_CXX_LIST11 ${FILE_NAME11}.cpp)
set (FILE_NAME12 C12_Exercise_12.10)
set (SOURCE_CXX_LIST12 ${FILE_NAME12}.cpp)
set (FILE_NAME13 C12_Exercise_12.11)
set (SOURCE_CXX_LIST13 ${FILE_NAME13}.cpp)
set (FILE_NAME14 C12_Exercise_12.12)
set (SOURCE_CXX_LIST14 ${FILE_NAME14}.cpp)
set (FILE_NAME15 C12_Exercise_12.13)
set (SOURCE_CXX_LIST15 ${FILE_NAME15}.cpp)


# Add source to this project's executable.
add_executable (${FILE_NAME} WIN32 ${SOURCE_CXX_LIST})
target_link_libraries(${FILE_NAME} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME2} WIN32 ${SOURCE_CXX_LIST2})
target_link_libraries(${FILE_NAME2} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME3} WIN32 ${SOURCE_CXX_LIST3})
target_link_libraries(${FILE_NAME3} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME4} WIN32 ${SOURCE_CXX_LIST4})
target_link_libraries(${FILE_NAME4} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME5} WIN32 ${SOURCE_CXX_LIST5})
target_link_libraries(${FILE_NAME5} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME6} WIN32 ${SOURCE_CXX_LIST6})
target_link_libraries(${FILE_NAME6} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME7} WIN32 ${SOURCE_CXX_LIST7})
target_link_libraries(${FILE_NAME7} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME8} WIN32 ${SOURCE_CXX_LIST8})
target_link_libraries(${FILE_NAME8} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME9} WIN32 ${SOURCE_CXX_LIST9})
target_link_libraries(${FILE_NAME9} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME10} WIN32 ${SOURCE_CXX_LIST10})
target_link_libraries(${FILE_NAME10} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME11} WIN32 ${SOURCE_CXX_LIST11})
target_link_libraries(${FILE_NAME11} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME12} WIN32 ${SOURCE_CXX_LIST12})
target_link_libraries(${FILE_NAME12} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME13} WIN32 ${SOURCE_CXX_LIST13})
target_link_libraries(${FILE_NAME13} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME14} WIN32 ${SOURCE_CXX_LIST14})
target_link_libraries(${FILE_NAME14} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME15} WIN32 ${SOURCE_CXX_LIST15})
target_link_libraries(${FILE_NAME15} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)


# TODO: Add tests and install targets if needed.
install (TARGETS ${FILE_NAME} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME} CONFIGURATIONS Release DESTINATION Build)
install (FILES C12_Drill_12_Fry.jpg C12_Drill_12_snow_cpp.gif CONFIGURATIONS Debug DESTINATION Build/Debug)
install (FILES C12_Drill_12_Fry.jpg C12_Drill_12_snow_cpp.gif CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME2} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME2} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME3} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME3} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME4} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME4} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME5} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME5} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME6} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME6} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME7} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME7} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME8} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME8} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME9} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME9} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME10} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME10} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME11} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME11} CONFIGURATIONS Release DESTINATION Build)
install (FILES C12_Exercise_12.9_11784800.jpg CONFIGURATIONS Debug DESTINATION Build/Debug)
install (FILES C12_Exercise_12.9_11784800.jpg CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME12} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME12} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME13} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME13} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME14} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME14} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME15} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME15} CONFIGURATIONS Release DESTINATION Build)
