# CMakeList.txt : CMake project for Template, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Chapter_13")

set (CMAKE_CXX_STANDARD 14)
set (CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/..)


set (FILE_NAME C13_Exercise_13.1)
set (SOURCE_CXX_LIST ${FILE_NAME}.cpp)
set (FILE_NAME2 C13_Exercise_13.2)
set (SOURCE_CXX_LIST2 ${FILE_NAME2}.cpp)
set (FILE_NAME3 C13_Exercise_13.3)
set (SOURCE_CXX_LIST3 ${FILE_NAME3}.cpp)
set (FILE_NAME4 C13_Exercise_13.4)
set (SOURCE_CXX_LIST4 ${FILE_NAME4}.cpp)
set (FILE_NAME5 C13_Exercise_13.5)
set (SOURCE_CXX_LIST5 ${FILE_NAME5}.cpp)
set (FILE_NAME6 C13_Exercise_13.6)
set (SOURCE_CXX_LIST6 ${FILE_NAME6}.cpp)
set (FILE_NAME7 C13_Exercise_13.7)
set (SOURCE_CXX_LIST7 ${FILE_NAME7}.cpp)
set (FILE_NAME8 C13_Exercise_13.8)
set (SOURCE_CXX_LIST8 ${FILE_NAME8}.cpp)
set (FILE_NAME9 C13_Exercise_13.9)
set (SOURCE_CXX_LIST9 ${FILE_NAME9}.cpp)
set (FILE_NAME10 C13_Exercise_13.10)
set (SOURCE_CXX_LIST10 ${FILE_NAME10}.cpp)
set (FILE_NAME11 C13_Exercise_13.11)
set (SOURCE_CXX_LIST11 ${FILE_NAME11}.cpp)
set (FILE_NAME12 C13_Exercise_13.12)
set (SOURCE_CXX_LIST12 ${FILE_NAME12}.cpp)
set (FILE_NAME13 C13_Exercise_13.13)
set (SOURCE_CXX_LIST13 ${FILE_NAME13}.cpp)
set (FILE_NAME14 C13_Exercise_13.14)
set (SOURCE_CXX_LIST14 ${FILE_NAME14}.cpp)
set (FILE_NAME15 C13_Exercise_13.15)
set (SOURCE_CXX_LIST15 ${FILE_NAME15}.cpp)
set (FILE_NAME16 C13_Exercise_13.16)
set (SOURCE_CXX_LIST16 ${FILE_NAME16}.cpp)
set (FILE_NAME17 C13_Exercise_13.17)
set (SOURCE_CXX_LIST17 ${FILE_NAME17}.cpp)
set (FILE_NAME18 C13_Exercise_13.18)
set (SOURCE_CXX_LIST18 ${FILE_NAME18}.cpp)


# Add source to this project's executable.
add_executable (${FILE_NAME} WIN32 ${SOURCE_CXX_LIST})
target_link_libraries(${FILE_NAME} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME2} WIN32 ${SOURCE_CXX_LIST2})
target_link_libraries(${FILE_NAME2} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME3} WIN32 ${SOURCE_CXX_LIST3})
target_link_libraries(${FILE_NAME3} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME4} WIN32 ${SOURCE_CXX_LIST4})
target_link_libraries(${FILE_NAME4} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME5} WIN32 ${SOURCE_CXX_LIST5})
target_link_libraries(${FILE_NAME5} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME6} WIN32 ${SOURCE_CXX_LIST6})
target_link_libraries(${FILE_NAME6} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME7} WIN32 ${SOURCE_CXX_LIST7})
target_link_libraries(${FILE_NAME7} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME8} WIN32 ${SOURCE_CXX_LIST8})
target_link_libraries(${FILE_NAME8} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME9} WIN32 ${SOURCE_CXX_LIST9})
target_link_libraries(${FILE_NAME9} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME10} WIN32 ${SOURCE_CXX_LIST10})
target_link_libraries(${FILE_NAME10} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME11} WIN32 ${SOURCE_CXX_LIST11})
target_link_libraries(${FILE_NAME11} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME12} WIN32 ${SOURCE_CXX_LIST12})
target_link_libraries(${FILE_NAME12} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME13} WIN32 ${SOURCE_CXX_LIST13})
target_link_libraries(${FILE_NAME13} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME14} WIN32 ${SOURCE_CXX_LIST14})
target_link_libraries(${FILE_NAME14} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME15} WIN32 ${SOURCE_CXX_LIST15})
target_link_libraries(${FILE_NAME15} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME16} WIN32 ${SOURCE_CXX_LIST16})
target_link_libraries(${FILE_NAME16} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME17} WIN32 ${SOURCE_CXX_LIST17})
target_link_libraries(${FILE_NAME17} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)
add_executable (${FILE_NAME18} WIN32 ${SOURCE_CXX_LIST18})
target_link_libraries(${FILE_NAME18} PPP2GUI fltk fltkforms fltkgl fltkimages fltkjpeg fltkpng fltkzlib)


# TODO: Add tests and install targets if needed.
install (TARGETS ${FILE_NAME} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME2} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME2} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME3} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME3} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME4} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME4} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME5} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME5} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME6} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME6} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME7} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME7} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME8} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME8} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME9} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME9} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME10} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME10} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME11} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME11} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME12} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME12} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME13} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME13} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME14} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME14} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME15} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME15} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME16} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME16} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME17} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME17} CONFIGURATIONS Release DESTINATION Build)
install (TARGETS ${FILE_NAME18} CONFIGURATIONS Debug DESTINATION Build/Debug)
install (TARGETS ${FILE_NAME18} CONFIGURATIONS Release DESTINATION Build)
